# global-energy

./: .gitignore  .pre-commit-config.yaml  docker-compose-local.yml  pyproject.toml
database/: Dockerfile
migrator/: 0001_setup.sql  Dockerfile
orchestrator/: dagster.yaml  pyproject.toml
orchestrator/orchestrator/: definitions.py
orchestrator/orchestrator.egg-info/: PKG-INFO  SOURCES.txt
orchestrator/orchestrator/assets/: greet.py
orchestrator/orchestrator/jobs/: __init__.py
schedules/: schedules.db
server/energy/: forms.py  models.py  urls.py  views.py
server/energy/migrations/: 0001_initial.py  0002_alter_document_document.py  0003_alter_document_document.py
server/energy/templates/: base.html  home.html  upload.html
server/webserver/: settings.py  urls.py
